# Quantum-Network-Knowledge-Graph

./: .env.example  .gitignore  LICENSE  README.md  READMEv2.md  cambios.md  package-lock.json  pyproject.toml
.cursor/: mcp.json
.lab/: DEPLOYMENT.md  qr_geenrator.py
data/: quantum_network.csv
project/: docs.md
src/api/: api.py  start_api.py
src/app/: README.md  start-dev.ps1  start-dev.sh
src/app/scripts/: build.ps1  build.sh  export_neo4j_data.js  run_etl_with_cleanup.py
src/app/ui/: .gitignore  Proyecto.md  README.md  index.html  package-lock.json  package.json  vite.config.js
src/app/ui/public/: graph-data.json  index.html
src/app/ui/src/: App.css  App.js  index.js  interactions.js
src/app/ui/src/components/: GraphVisualization.css  GraphVisualization.js  NodeInfoPanel.css  NodeInfoPanel.js  QueryPanel.css  QueryPanel.js  QueryPanel.test.js
src/app/ui/src/data/: mockData.js  strategicQueries.js  strategicQueries.test.js
src/app/ui/src/hooks/: useCypherQuery.js  useCypherQuery.test.js  useGraphData.js
src/config/: conf.py
src/core/: llm_service.py  logger.py
src/notebooks/: quantum_network_knowledge_graph.ipynb
src/pipeline/: etl_to_graph.py  export_neo4j_data.py
tests/: README.md  README_API_TESTS.md  TEST_SUMMARY.md  __init__.py  conftest.py  test_api_end_to_end.py  test_etl_end_to_end.py  test_etl_pipeline.py  verify_pipeline.py
