[project]
name = "quantum-network-knowledge-graph"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.12"
dependencies = [
    "fastmcp>=2.13.1",
    "langchain>=1.0.7",
    "langchain-ollama>=1.0.0",
    "neo4j>=6.0.3",
    "pandas>=2.3.3",
    "pip>=25.3",
    "pydantic-settings>=2.0.0",
    "python-dotenv>=1.2.1",
    "qrcode[pil]>=8.2",
]

[dependency-groups]
dev = [
    "mypy>=1.18.2",
    "pre-commit>=4.4.0",
    "pytest>=7.4.0",
    "pytest-cov>=4.1.0",
    "pytest-mock>=3.11.0",
    "ruff>=0.14.5",
]
